--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Xander Nelson</title>
-    <link rel="stylesheet" href="Styles/Styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div class="logo">Xander Nelson</div>
     <nav>
         <a class="active" href="Index.html">Home</a>
-        <a href="html/Resume.html">Resume</a>
+        <a href="html/resume.html">Resume</a>
         <a href="HTML/aboutme.html">About Me</a>
     </nav>
 </header>
@@ -33,3 +33,4 @@
 
 </body>
 </html>
+
