--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me | Xander Nelson</title>
-    <link rel="stylesheet" href="../Styles/Styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 
 <body>
@@ -12,8 +12,8 @@
 <header class="navbar">
     <div class="logo">Xander Nelson</div>
     <nav>
-        <a href="../Index.html">Home</a>
-        <a href="../html/Resume.html">Resume</a>
+        <a href="../index.html">Home</a>
+        <a href="../html/resume.html">Resume</a>
         <a class="active" href="aboutme.html">About Me</a>
     </nav>
 </header>
@@ -24,7 +24,7 @@
 </div>
 
 <div class="section" style="text-align:center;">
-    <img src="../Images/profile pic.png" class="about-photo" alt="Xander">
+    <img src="../images/profile pic.png" class="about-photo" alt="Xander">
     <p>Hello! I'm Xander — a driven, people-oriented leader with a passion for branding, marketing, 
     and helping teams excel. I love building experiences, improving systems, and understanding what makes people move.</p>
 </div>
@@ -70,3 +70,4 @@
 
 </body>
 </html>
+
