--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume | Xander Nelson</title>
-    <link rel="stylesheet" href="../Styles/Styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 
 <body>
@@ -46,7 +46,7 @@
     <h2>Education</h2>
 
     <div class="company-block">
-        <img src="../Images/Logos/byu.png" class="company-logo" alt="BYU Logo">
+        <img src="../images/logos/byu.png" class="company-logo" alt="BYU Logo">
         <div>
             <h3>Brigham Young University — Provo, Utah (2022–Present)</h3>
         </div>
@@ -58,7 +58,7 @@
     </ul>
 
     <div class="company-block">
-        <img src="../Images/Logos/brighton.webp" class="company-logo" alt="Brighton High School Logo">
+        <img src="../images/logos/brighton.webp" class="company-logo" alt="Brighton High School Logo">
         <div>
             <h3>Brighton High School — Cottonwood Heights, Utah (2018–2022)</h3>
         </div>
@@ -80,7 +80,7 @@
     <h2>Experience</h2>
 
     <div class="company-block">
-        <img src="../Images/Logos/swig.png" class="company-logo" alt="Swig Logo">
+        <img src="../images/logos/swig.png" class="company-logo" alt="Swig Logo">
         <div>
             <h3>General Manager — Swig (Orem) | Aug 2025 – Present</h3>
         </div>
@@ -97,7 +97,7 @@
     </ul>
 
     <div class="company-block">
-        <img src="../Images/Logos/fsy.jpg" class="company-logo" alt="FSY Logo">
+        <img src="../images/logos/fsy.jpg" class="company-logo" alt="FSY Logo">
         <div>
             <h3>Youth Counselor — For the Strength of Youth | May 2025 – Aug 2025</h3>
         </div>
@@ -111,7 +111,7 @@
     </ul>
 
     <div class="company-block">
-        <img src="../Images/Logos/swig.png" class="company-logo" alt="Swig Logo">
+        <img src="../images/logos/swig.png" class="company-logo" alt="Swig Logo">
         <div>
             <h3>Shift Lead — Swig (Cottonwood Heights & Provo) | 2022–2023, 2025</h3>
         </div>
@@ -123,7 +123,7 @@
     </ul>
 
     <div class="company-block">
-        <img src="../Images/Logos/nelsonfamilyestate.png" class="company-logo" alt="Nelson Estate Logo">
+        <img src="../images/logos/nelsonfamilyestate.png" class="company-logo" alt="Nelson Estate Logo">
         <div>
             <h3>Nelson Estate Maintenance — Midway, UT | 2016–2022</h3>
         </div>
@@ -134,7 +134,7 @@
     </ul>
 
     <div class="company-block">
-        <img src="../Images/Logos/christmas in color.png" class="company-logo" alt="Christmas in Color Logo">
+        <img src="../images/logos/christmas in color.png" class="company-logo" alt="Christmas in Color Logo">
         <div>
             <h3>Christmas in Color — Draper, UT | 2021</h3>
         </div>
@@ -152,7 +152,7 @@
     <h2>Leadership & Service</h2>
 
     <div class="company-block">
-        <img src="../Images/Logos/church.webp" class="company-logo" alt="LDS Logo">
+        <img src="../images/logos/church.webp" class="company-logo" alt="LDS Logo">
         <div>
             <h3>Missionary — Newport Beach California Mission (2023–2025)</h3>
         </div>
@@ -184,3 +184,4 @@
 
 </body>
 </html>
+
