--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -12,8 +12,8 @@
 <header class="navbar">
     <div class="logo">Xander Nelson</div>
     <nav>
-        <a href="../Index.html">Home</a>
-        <a class="active" href="Resume.html">Resume</a>
+        <a href="../index.html">Home</a>
+        <a class="active" href="resume.html">Resume</a>
         <a href="../HTML/aboutme.html">About Me</a>
     </nav>
 </header>
@@ -184,4 +184,5 @@
 
 </body>
 </html>
+
 
