--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="navbar">
     <div class="logo">Xander Nelson</div>
     <nav>
-        <a class="active" href="Index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="html/resume.html">Resume</a>
         <a href="HTML/aboutme.html">About Me</a>
     </nav>
@@ -33,4 +33,5 @@
 
 </body>
 </html>
+
 
