--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo">Xander Nelson</div>
     <nav>
         <a class="active" href="index.html">Home</a>
-        <a href="html/resume.html">Resume</a>
+        <a href="HTML/resume.html">Resume</a>
         <a href="HTML/aboutme.html">About Me</a>
     </nav>
 </header>
@@ -33,5 +33,6 @@
 
 </body>
 </html>
+
 
 
