--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -13,7 +13,7 @@
     <div class="logo">Xander Nelson</div>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="../html/resume.html">Resume</a>
+        <a href="resume.html">Resume</a>
         <a class="active" href="aboutme.html">About Me</a>
     </nav>
 </header>
@@ -70,4 +70,5 @@
 
 </body>
 </html>
+
 
