--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -12,10 +12,10 @@
 <header class="navbar">
     <div class="logo">Xander Nelson</div>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="resume.html">Resume</a>
-        <a class="active" href="aboutme.html">About Me</a>
-    </nav>
+    <a href="../index.html">Home</a>
+    <a href="../HTML/resume.html">Resume</a>
+    <a class="active" href="../HTML/aboutme.html">About Me</a>
+</nav>
 </header>
 
 <div class="page-header">
@@ -70,5 +70,6 @@
 
 </body>
 </html>
+
 
 
