--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -10,11 +10,11 @@
 <body>
 
 <header class="navbar">
-    <div class="logo">Xander Nelson</div>
+<div class="logo">Xander Nelson</div>
     <nav>
         <a href="../index.html">Home</a>
-        <a class="active" href="resume.html">Resume</a>
-        <a href="../HTML/aboutme.html">About Me</a>
+        <a href="../HTML/resume.html">Resume</a>
+        <a class="active" href="../HTML/aboutme.html">About Me</a>
     </nav>
 </header>
 
@@ -184,5 +184,6 @@
 
 </body>
 </html>
+
 
 
