--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -13,8 +13,8 @@
 <div class="logo">Xander Nelson</div>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="../HTML/resume.html">Resume</a>
-        <a class="active" href="../HTML/aboutme.html">About Me</a>
+        <a class="active" href="../HTML/resume.html">Resume</a>
+        <a href="../HTML/aboutme.html">About Me</a>
     </nav>
 </header>
 
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
