--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -54,7 +54,7 @@
     <ul>
         <li>BYU Marketing Team — Team Member</li>
         <li>Skills: ERP systems, Data Security & Privacy, Database Modeling, SQL,
-            Project Management, Excel Automation (VBA), Tableau</li>
+            Project Management, Excel Automation (VBA), Tableau, Web Development (HTML & CSS)</li>
     </ul>
 
     <div class="company-block">
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
