--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -45,7 +45,7 @@
     <p>As I progress academically and professionally, I hope to build meaningful connections and leave a positive impacts wherever
         work. I have set my professional goals to be focused on careers that would seemlessly involve
         brand management and public facing corporate roles, likely leading to positions such as chief brand officer.
-        Regardless of whatever company I'm apart of, I want to see people as people, not numbers, and how we can improve their in impactful ways. 
+        Regardless of whichever company I'm apart of, I want to see people as people, not numbers, and how we can improve their lives in impactful ways. 
     </p>
 </div>
 
@@ -70,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
