--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -57,7 +57,7 @@
         <li>Music is a big part of my life — I love producing beats and discovering new sounds.</li>
         <li>I genuinely enjoy connecting with people and understanding their stories and backgrounds.</li>
         <li>Spanish has become a meaningful part of my life, and I love the cultures connected to it.</li>
-        <li>I'm happiest when I'm outside — mountains, late-night drives, and bonfires are my go-to.</li>
+        <li>I'm happiest when I'm outside — mountains, late-night drives, and bonfires are my go-tos.</li>
         <li>I’m big on traditions, meaningful moments, and spending intentional time with people.</li>
         <li>I love friendly competition — games, sports, challenges — anything that brings people together.</li>
         <li>I'm always trying to grow personally, whether spiritually, mentally, or through learning new things.</li>
@@ -70,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
