--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -93,7 +93,7 @@
         <li>Screened 300+ resumes, led interviews, and executed structured onboarding programs.</li>
         <li>Held KPI reviews, performance evaluations, and development sessions for team leads.</li>
         <li>Collaborated with regional leadership on marketing, financial planning, and operations strategy.</li>
-        <li>Team leader for Guinness World Record: Most drinks served in one hour.</li>
+        <li>Team leader for Guinness World Record: Most drinks served in one hour (4,500).</li>
     </ul>
 
     <div class="company-block">
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
