Update scratch.html links

--- a/HTML/scratch.html
+++ b/HTML/scratch.html
@@ -10,9 +10,9 @@
 <header class="navbar">
     <div class="logo">Xander Nelson</div>
     <nav>
-        <a class="active" href="index.html">Home</a>
-        <a href="html/resume.html">Resume</a>
-        <a href="HTML/aboutme.html">About Me</a>
+        <a href="../index.html">Home</a>
+        <a href="../HTML/resume.html">Resume</a>
+        <a href="../HTML/aboutme.html">About Me</a>
     </nav>
 </header>
     
