--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -36,3 +36,252 @@
 
 
 
+ -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Xander Nelson | Portfolio</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+</head>
+
+<body>
+
+  <!-- NAVBAR -->
+  <header class="navbar">
+    <div class="logo">Xander Nelson</div>
+    <nav>
+      <a class="active" href="#home">Home</a>
+      <a href="#resume">Resume</a>
+      <a href="#about">About Me</a>
+    </nav>
+  </header>
+
+  <!-- HOME / HERO -->
+  <section id="home" class="hero">
+    <div class="hero-text">
+      <h1>Welcome! I'm Xander Nelson</h1>
+      <p>Leader • Builder • Marketing Mind • Future Brand Executive</p>
+    </div>
+
+    <div class="hero-img">
+      <img src="images/profile pic.png" alt="Xander Nelson" />
+    </div>
+  </section>
+
+  <!-- RESUME SECTION -->
+  <section id="resume" class="section">
+    <div class="page-header">
+      <h1>Resume</h1>
+      <p>A summary of my experience, leadership, and achievements.</p>
+    </div>
+
+    <!-- CONTACT -->
+    <div class="section">
+      <h2>Contact</h2>
+      <p>
+        <strong>Phone:</strong> (801) 244-6108<br>
+        <strong>Email:</strong> xander@russandbrit.com<br>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/xander-nelson/" target="_blank" style="color:#00aaff;">
+          linkedin.com/in/xander-nelson
+        </a>
+      </p>
+    </div>
+
+    <!-- EDUCATION -->
+    <div class="section">
+      <h2>Education</h2>
+
+      <div class="company-block">
+        <img src="images/logos/byu.png" class="company-logo" alt="BYU Logo">
+        <div>
+          <h3>Brigham Young University — Provo, Utah (2022–Present)</h3>
+        </div>
+      </div>
+      <ul>
+        <li>BYU Marketing Team — Team Member</li>
+        <li>
+          Skills: ERP systems, Data Security &amp; Privacy, Database Modeling, SQL,
+          Project Management, Excel Automation (VBA), Tableau, Web Development (HTML &amp; CSS)
+        </li>
+      </ul>
+
+      <div class="company-block">
+        <img src="images/logos/brighton.webp" class="company-logo" alt="Brighton High School Logo">
+        <div>
+          <h3>Brighton High School — Cottonwood Heights, Utah (2018–2022)</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Scholastic Excellence Award — U.S. Marine Corps</li>
+        <li>Academic All-American Athlete</li>
+        <li>Swim Team Captain</li>
+        <li>Seminary Council Member</li>
+        <li>Student Advisory Council &amp; Peer Mentor</li>
+      </ul>
+    </div>
+
+    <!-- EXPERIENCE -->
+    <div class="section">
+      <h2>Experience</h2>
+
+      <div class="company-block">
+        <img src="images/logos/swig.png" class="company-logo" alt="Swig Logo">
+        <div>
+          <h3>General Manager — Swig (Orem) | Aug 2025 – Present</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Oversaw full business operations with P&amp;L accountability for a high-volume retail location.</li>
+        <li>Expanded workforce by 25–30% and built the most leadership-stable unit in the region.</li>
+        <li>Reduced line times by 10–15 seconds through workflow optimization.</li>
+        <li>Managed labor strategy, scheduling, payroll, and profitability controls.</li>
+        <li>Screened 300+ resumes, led interviews, and executed structured onboarding programs.</li>
+        <li>Held KPI reviews, performance evaluations, and development sessions for team leads.</li>
+        <li>Collaborated with regional leadership on marketing, financial planning, and operations strategy.</li>
+        <li>Team leader for Guinness World Record: Most drinks served in one hour (4,500).</li>
+      </ul>
+
+      <div class="company-block">
+        <img src="images/logos/fsy.jpg" class="company-logo" alt="FSY Logo">
+        <div>
+          <h3>Youth Counselor — For the Strength of Youth | May 2025 – Aug 2025</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Led groups of 40+ youth using English and Spanish in high-intensity leadership programs.</li>
+        <li>Delivered workshops, team-building exercises, and motivational training.</li>
+        <li>Oversaw logistics, scheduling, safety, and event coordination.</li>
+        <li>Certified in youth protection and leadership ethics.</li>
+        <li>Partnered with 60+ staff members to run complex multi-day programs.</li>
+      </ul>
+
+      <div class="company-block">
+        <img src="images/logos/swig.png" class="company-logo" alt="Swig Logo">
+        <div>
+          <h3>Shift Lead — Swig (Cottonwood Heights &amp; Provo) | 2022–2023, 2025</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Served 200+ customers per shift with consistent speed and accuracy.</li>
+        <li>Memorized 50+ custom drink combinations.</li>
+        <li>Handled cash and resolved customer escalations.</li>
+      </ul>
+
+      <div class="company-block">
+        <img src="images/logos/nelsonfamilyestate.png" class="company-logo" alt="Nelson Estate Logo">
+        <div>
+          <h3>Nelson Estate Maintenance — Midway, UT | 2016–2022</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Maintained 4.5-acre property and performed weekly grounds care.</li>
+        <li>Repaired commercial lawn equipment and supported remodeling projects.</li>
+      </ul>
+
+      <div class="company-block">
+        <img src="images/logos/christmas in color.png" class="company-logo" alt="Christmas in Color Logo">
+        <div>
+          <h3>Christmas in Color — Draper, UT | 2021</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Installed thousands of Christmas lights during intensive setup shifts.</li>
+      </ul>
+    </div>
+
+    <!-- LEADERSHIP & SERVICE -->
+    <div class="section">
+      <h2>Leadership &amp; Service</h2>
+
+      <div class="company-block">
+        <img src="images/logos/church.webp" class="company-logo" alt="LDS Logo">
+        <div>
+          <h3>Missionary — Newport Beach California Mission (2023–2025)</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Trainer, District Leader, Zone Leader.</li>
+        <li>Led councils, trained large groups, and mentored missionaries individually.</li>
+        <li>Studied and spoke Spanish daily across multiple dialect regions.</li>
+      </ul>
+    </div>
+
+    <!-- ACHIEVEMENTS -->
+    <div class="section">
+      <h2>Achievements &amp; Interests</h2>
+      <ul>
+        <li>Brighton High School 4×100 Freestyle Relay Record Holder</li>
+        <li>Scholastic &amp; Leadership Excellence Award — U.S. Marines</li>
+        <li>Certificate in Spanish Translation &amp; Communication</li>
+        <li>Guinness World Record team leader</li>
+        <li>Eagle Scout</li>
+        <li>Hobbies: woodworking, music production, blacksmithing, ballroom dance, weightlifting</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- ABOUT SECTION -->
+  <section id="about" class="section">
+    <div class="page-header">
+      <h1>About Me</h1>
+      <p>Who I am, what drives me, and where I’m going.</p>
+    </div>
+
+    <div class="section" style="text-align:center;">
+      <img src="images/profile pic.png" class="about-photo" alt="Xander">
+      <p>
+        Hello! I'm Xander — a driven, people-oriented leader with a passion for branding, marketing,
+        and helping teams excel. I love building experiences, improving systems, and understanding what makes people move.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>What I'm Passionate About</h2>
+      <ul>
+        <li>Creating meaningful experiences that leave people better than before.</li>
+        <li>Understanding people — what drives them, how they think, and how to truly connect.</li>
+        <li>Creativity and storytelling, especially in how brands shape culture and emotion.</li>
+        <li>Leadership that builds people up and helps them grow in real, lasting ways.</li>
+        <li>Becoming a better version of myself and pursuing growth in every part of life.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Where I'm Going</h2>
+      <p>
+        As I progress academically and professionally, I hope to build meaningful connections and leave a positive impact wherever
+        I work. I have set my professional goals to be focused on careers that seamlessly involve
+        brand management and public-facing corporate roles, likely leading to positions such as chief brand officer.
+        Regardless of whichever company I'm a part of, I want to see people as people, not numbers, and look for ways to improve their lives in impactful ways.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Fun Facts</h2>
+      <ul>
+        <li>I love learning hands-on skills like woodworking and metalworking — building things grounds me.</li>
+        <li>I always have a personal project going, whether it's something creative or something practical.</li>
+        <li>Music is a big part of my life — I love producing beats and discovering new sounds.</li>
+        <li>I genuinely enjoy connecting with people and understanding their stories and backgrounds.</li>
+        <li>Spanish has become a meaningful part of my life, and I love the cultures connected to it.</li>
+        <li>I'm happiest when I'm outside — mountains, late-night drives, and bonfires are my go-tos.</li>
+        <li>I’m big on traditions, meaningful moments, and spending intentional time with people.</li>
+        <li>I love friendly competition — games, sports, challenges — anything that brings people together.</li>
+        <li>I'm always trying to grow personally, whether spiritually, mentally, or through learning new things.</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- BACK TO TOP -->
+  <a href="#home" class="back-to-top">↑ Back to top</a>
+
+  <!-- FOOTER -->
+  <footer>
+    © 2025 Xander Nelson. All rights reserved.
+  </footer>
+
+</body>
+</html>
