--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   <header class="navbar">
     <div class="logo">Xander Nelson</div>
     <nav>
-      <a class="active" href="#home">Home</a>
-      <a href="#resume">Resume</a>
-      <a href="#about">About Me</a>
+    <a href="#home">Home</a>
+    <a href="#resume">Resume</a>
+    <a href="#about">About Me</a>
     </nav>
   </header>
 
@@ -285,3 +285,4 @@
 
 </body>
 </html>
+
