--- a/index.html
+++ b/index.html
@@ -282,8 +282,24 @@
   <footer>
     © 2025 Xander Nelson. All rights reserved.
   </footer>
+<script>
+  // Smooth scroll for all internal anchor links
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      const targetId = this.getAttribute('href').substring(1);
+      const target = document.getElementById(targetId);
 
+      if (target) {
+        e.preventDefault();
+        target.scrollIntoView({ behavior: 'smooth' });
+        history.pushState(null, '', '#' + targetId);
+      }
+    });
+  });
+</script>
 </body>
 </html>
+
+
 
 
