--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
         </div>
       </div>
       <ul>
-        <li>Oversaw full business operations with P&amp;L accountability for a high-volume retail location.</li>
+        <li>Oversaw full business operations with P&L accountability for a high-volume retail location.</li>
         <li>Expanded workforce by 25–30% and built the most leadership-stable unit in the region.</li>
-        <li>Reduced line times by 10–15 seconds through workflow optimization.</li>
+        <li>Reduced line times by 33% seconds, achieving top 10 in the company and top 5 in the state, through workflow optimization.</li>
         <li>Managed labor strategy, scheduling, payroll, and profitability controls.</li>
-        <li>Screened 300+ resumes, led interviews, and executed structured onboarding programs.</li>
+        <li>Worked one on one with team members with goal setting, action plans, and when applicable terminations.
+        <li>Screened 300+ resumes, conducted interviews, and executed structured onboarding programs.</li>
         <li>Held KPI reviews, performance evaluations, and development sessions for team leads.</li>
         <li>Collaborated with regional leadership on marketing, financial planning, and operations strategy.</li>
         <li>Team leader for Guinness World Record: Most drinks served in one hour (4,500).</li>
@@ -284,6 +285,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
