--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <li>Expanded workforce by 25–30% and built the most leadership-stable unit in the region.</li>
         <li>Reduced line times by 33% seconds, achieving top 10 in the company and top 5 in the state, through workflow optimization.</li>
         <li>Managed labor strategy, scheduling, payroll, and profitability controls.</li>
-        <li>Worked one on one with team members with goal setting, action plans, and when applicable terminations.
+        <li>Worked one on one with team members with goal setting, action plans, and when applicable terminations.</li>
         <li>Screened 300+ resumes, conducted interviews, and executed structured onboarding programs.</li>
         <li>Held KPI reviews, performance evaluations, and development sessions for team leads.</li>
         <li>Collaborated with regional leadership on marketing, financial planning, and operations strategy.</li>
@@ -285,6 +285,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
