--- a/index.html
+++ b/index.html
@@ -1,42 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Xander Nelson</title>
-    <link rel="stylesheet" href="styles/styles.css" />
-</head>
-
-<body>
-
-<header class="navbar">
-    <div class="logo">Xander Nelson</div>
-    <nav>
-        <a class="active" href="index.html">Home</a>
-        <a href="HTML/resume.html">Resume</a>
-        <a href="HTML/aboutme.html">About Me</a>
-    </nav>
-</header>
-
-<section class="hero">
-    <div class="hero-text">
-        <h1>Welcome! I'm Xander Nelson</h1>
-        <p>Leader • Builder • Marketing Mind • Future Brand Executive</p>
-    </div>
-
-    <div class="hero-img">
-        <img src="images/profile pic.png" alt="Xander Nelson" />
-    </div>
-</section>
-
-<footer>© 2025 Xander Nelson. All rights reserved.</footer>
-
-</body>
-</html>
-
-
-
- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -52,17 +13,33 @@
   <header class="navbar">
     <div class="logo">Xander Nelson</div>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#resume">Resume</a>
-        <a href="#about">About Me</a>
+      <a href="#home">Home</a>
+      <a href="#resume">Resume</a>
+      <a href="#about">About Me</a>
     </nav>
   </header>
 
-  <!-- HOME / HERO -->
+  <!-- HERO -->
   <section id="home" class="hero">
     <div class="hero-text">
       <h1>Welcome! I'm Xander Nelson</h1>
       <p>Leader • Builder • Marketing Mind • Future Brand Executive</p>
+
+      <!-- CTA -->
+      <div class="hero-cta">
+        <!-- PDF resume in same folder as index.html -->
+        <a href="Master Resume.pdf"
+           class="btn btn-primary"
+           target="_blank">
+          Download Resume
+        </a>
+
+        <a href="https://www.linkedin.com/in/xander-nelson/"
+           target="_blank"
+           class="btn btn-secondary">
+          Connect on LinkedIn
+        </a>
+      </div>
     </div>
 
     <div class="hero-img">
@@ -70,8 +47,8 @@
     </div>
   </section>
 
-  <!-- RESUME SECTION -->
-  <section id="resume" class="section">
+  <!-- RESUME -->
+  <section id="resume" class="section-wrapper">
     <div class="page-header">
       <h1>Resume</h1>
       <p>A summary of my experience, leadership, and achievements.</p>
@@ -84,7 +61,7 @@
         <strong>Phone:</strong> (801) 244-6108<br>
         <strong>Email:</strong> xander@russandbrit.com<br>
         <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/xander-nelson/" target="_blank" style="color:#00aaff;">
+        <a href="https://www.linkedin.com/in/xander-nelson/" target="_blank" style="color:#5abcea;">
           linkedin.com/in/xander-nelson
         </a>
       </p>
@@ -134,12 +111,12 @@
         </div>
       </div>
       <ul>
-        <li>Oversaw full business operations with P&L accountability for a high-volume retail location.</li>
+        <li>Oversaw full business operations with P&amp;L accountability for a high-volume retail location.</li>
         <li>Expanded workforce by 25–30% and built the most leadership-stable unit in the region.</li>
         <li>Reduced line times by 33% seconds, achieving top 10 in the company and top 5 in the state, through workflow optimization.</li>
         <li>Managed labor strategy, scheduling, payroll, and profitability controls.</li>
         <li>Worked one on one with team members with goal setting, action plans, and when applicable terminations.</li>
-        <li>Screened 300+ resumes, conducted interviews, and executed structured onboarding programs.</li>
+        <li>Screened 300+ resumes, led interviews, and executed structured onboarding programs.</li>
         <li>Held KPI reviews, performance evaluations, and development sessions for team leads.</li>
         <li>Collaborated with regional leadership on marketing, financial planning, and operations strategy.</li>
         <li>Team leader for Guinness World Record: Most drinks served in one hour (4,500).</li>
@@ -224,8 +201,8 @@
     </div>
   </section>
 
-  <!-- ABOUT SECTION -->
-  <section id="about" class="section">
+  <!-- ABOUT -->
+  <section id="about" class="section-wrapper">
     <div class="page-header">
       <h1>About Me</h1>
       <p>Who I am, what drives me, and where I’m going.</p>
@@ -283,12 +260,6 @@
   <footer>
     © 2025 Xander Nelson. All rights reserved.
   </footer>
+
 </body>
 </html>
-
-
-
-
-
-
-
