--- a/index.html
+++ b/index.html
@@ -21,26 +21,24 @@
 
   <!-- HERO -->
   <section id="home" class="hero">
-    <div class="hero-text">
-      <h1>Welcome! I'm Xander Nelson</h1>
-      <p>Leader • Builder • Marketing Mind • Future Brand Executive</p>
+    <div class="hero-cta">
+  <a href="Master Resume.pdf"
+     class="btn btn-primary"
+     target="_blank">
+    Download Resume
+  </a>
 
-      <!-- CTA -->
-      <div class="hero-cta">
-        <!-- PDF resume in same folder as index.html -->
-        <a href="Master Resume.pdf"
-           class="btn btn-primary"
-           target="_blank">
-          Download Resume
-        </a>
+  <a href="https://www.linkedin.com/in/xander-nelson/"
+     target="_blank"
+     class="btn btn-secondary">
+    Connect on LinkedIn
+  </a>
 
-        <a href="https://www.linkedin.com/in/xander-nelson/"
-           target="_blank"
-           class="btn btn-secondary">
-          Connect on LinkedIn
-        </a>
-      </div>
-    </div>
+  <a href="mailto:xander@russandbrit.com"
+     class="btn btn-secondary">
+    Email Me
+  </a>
+</div>
 
     <div class="hero-img">
       <img src="images/profile pic.png" alt="Xander Nelson" />
@@ -52,19 +50,6 @@
     <div class="page-header">
       <h1>Resume</h1>
       <p>A summary of my experience, leadership, and achievements.</p>
-    </div>
-
-    <!-- CONTACT -->
-    <div class="section">
-      <h2>Contact</h2>
-      <p>
-        <strong>Phone:</strong> (801) 244-6108<br>
-        <strong>Email:</strong> xander@russandbrit.com<br>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/xander-nelson/" target="_blank" style="color:#5abcea;">
-          linkedin.com/in/xander-nelson
-        </a>
-      </p>
     </div>
 
     <!-- EDUCATION -->
@@ -263,3 +248,4 @@
 
 </body>
 </html>
+
