--- a/index.html
+++ b/index.html
@@ -21,24 +21,29 @@
 
   <!-- HERO -->
   <section id="home" class="hero">
-    <div class="hero-cta">
-  <a href="Master Resume.pdf"
-     class="btn btn-primary"
-     target="_blank">
-    Download Resume
-  </a>
+    <div class="hero-text">
+      <h1>Welcome! I'm Xander Nelson</h1>
+      <p>Leader • Builder • Marketing Mind • Future Brand Executive</p>
 
-  <a href="https://www.linkedin.com/in/xander-nelson/"
-     target="_blank"
-     class="btn btn-secondary">
-    Connect on LinkedIn
-  </a>
+      <div class="hero-cta">
+        <a href="Master Resume.pdf"
+           class="btn btn-primary"
+           target="_blank">
+          Download Resume
+        </a>
 
-  <a href="mailto:xander@russandbrit.com"
-     class="btn btn-secondary">
-    Email Me
-  </a>
-</div>
+        <a href="https://www.linkedin.com/in/xander-nelson/"
+           target="_blank"
+           class="btn btn-secondary">
+          Connect on LinkedIn
+        </a>
+
+        <a href="mailto:xander@russandbrit.com"
+           class="btn btn-secondary">
+          Email Me
+        </a>
+      </div>
+    </div>
 
     <div class="hero-img">
       <img src="images/profile pic.png" alt="Xander Nelson" />
@@ -65,8 +70,8 @@
       <ul>
         <li>BYU Marketing Team — Team Member</li>
         <li>
-          Skills: ERP systems, Data Security &amp; Privacy, Database Modeling, SQL,
-          Project Management, Excel Automation (VBA), Tableau, Web Development (HTML &amp; CSS)
+          Skills: ERP systems, Data Security & Privacy, Database Modeling, SQL,
+          Project Management, Excel Automation (VBA), Tableau, Web Development (HTML & CSS)
         </li>
       </ul>
 
@@ -81,7 +86,7 @@
         <li>Academic All-American Athlete</li>
         <li>Swim Team Captain</li>
         <li>Seminary Council Member</li>
-        <li>Student Advisory Council &amp; Peer Mentor</li>
+        <li>Student Advisory Council & Peer Mentor</li>
       </ul>
     </div>
 
@@ -96,7 +101,7 @@
         </div>
       </div>
       <ul>
-        <li>Oversaw full business operations with P&amp;L accountability for a high-volume retail location.</li>
+        <li>Oversaw full business operations with P&L accountability for a high-volume retail location.</li>
         <li>Expanded workforce by 25–30% and built the most leadership-stable unit in the region.</li>
         <li>Reduced line times by 33% seconds, achieving top 10 in the company and top 5 in the state, through workflow optimization.</li>
         <li>Managed labor strategy, scheduling, payroll, and profitability controls.</li>
@@ -124,7 +129,7 @@
       <div class="company-block">
         <img src="images/logos/swig.png" class="company-logo" alt="Swig Logo">
         <div>
-          <h3>Shift Lead — Swig (Cottonwood Heights &amp; Provo) | 2022–2023, 2025</h3>
+          <h3>Shift Lead — Swig (Cottonwood Heights & Provo) | 2022–2023, 2025</h3>
         </div>
       </div>
       <ul>
@@ -157,7 +162,7 @@
 
     <!-- LEADERSHIP & SERVICE -->
     <div class="section">
-      <h2>Leadership &amp; Service</h2>
+      <h2>Leadership & Service</h2>
 
       <div class="company-block">
         <img src="images/logos/church.webp" class="company-logo" alt="LDS Logo">
@@ -174,11 +179,11 @@
 
     <!-- ACHIEVEMENTS -->
     <div class="section">
-      <h2>Achievements &amp; Interests</h2>
+      <h2>Achievements & Interests</h2>
       <ul>
         <li>Brighton High School 4×100 Freestyle Relay Record Holder</li>
-        <li>Scholastic &amp; Leadership Excellence Award — U.S. Marines</li>
-        <li>Certificate in Spanish Translation &amp; Communication</li>
+        <li>Scholastic & Leadership Excellence Award — U.S. Marines</li>
+        <li>Certificate in Spanish Translation & Communication</li>
         <li>Guinness World Record team leader</li>
         <li>Eagle Scout</li>
         <li>Hobbies: woodworking, music production, blacksmithing, ballroom dance, weightlifting</li>
@@ -248,4 +253,3 @@
 
 </body>
 </html>
-
