--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
         </a>
 
         <a href="mailto:xander@russandbrit.com"
-           class="btn btn-secondary">
+          class="btn btn-secondary"
+          target="_blank"
+          rel="noopener noreferrer">
           Email Me
         </a>
+
       </div>
     </div>
 
@@ -253,3 +256,4 @@
 
 </body>
 </html>
+
