--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <ul>
         <li>Oversaw full business operations with P&L accountability for a high-volume retail location.</li>
         <li>Expanded workforce by 25–30% and built the most leadership-stable unit in the region.</li>
-        <li>Reduced line times by 33% seconds, achieving top 10 in the company and top 5 in the state, through workflow optimization.</li>
+        <li>Reduced line times by 33%, achieving top 10 in the company and top 5 in the state, through workflow optimization.</li>
         <li>Managed labor strategy, scheduling, payroll, and profitability controls.</li>
         <li>Worked one on one with team members with goal setting, action plans, and when applicable terminations.</li>
         <li>Screened 300+ resumes, led interviews, and executed structured onboarding programs.</li>
@@ -256,4 +256,5 @@
 
 </body>
 </html>
+
 
