--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Xander Nelson | Portfolio</title>
-   <link rel="icon" type="image/x-icon" href="favicon5.png" />
+   <link rel="icon" type="image/x-icon" href="faviconfinalthis.png" />
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
