--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
 
-  <!-- NAVBAR -->
-  <header class="navbar">
-    <div class="logo">Xander Nelson</div>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#resume">Resume</a>
-      <a href="#about">About Me</a>
-    </nav>
-  </header>
-
+ <!-- NAVBAR -->
+<header class="navbar">
+  <img src="faviconbruh.png" alt="Xander Nelson" class="logo" />
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#resume">Resume</a>
+    <a href="#about">About Me</a>
+  </nav>
+</header>
+  
   <!-- HERO -->
   <section id="home" class="hero">
     <div class="hero-text">
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
