--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="company-block">
         <img src="images/logos/swig.png" class="company-logo" alt="Swig Logo">
         <div>
-          <h3>General Manager — Swig (Orem) | Aug 2025 – Present</h3>
+          <h3>General Manager — Swig (Orem) | Aug 2025 – Jan 2026</h3>
         </div>
       </div>
       <ul>
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
