--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="hero-img">
-      <img src="images/profile pic.png" alt="Xander Nelson" />
+      <img src="images/propic.jpg" alt="Xander Nelson" />
     </div>
   </section>
 
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
